# fightmatch

./: .gitignore  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  fightmatch.db  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
apps/web/: package.json  vitest.config.ts
apps/web/.next/cache/: config.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/rankings/: page.tsx
apps/web/app/api/admin/rankings/: route.ts
apps/web/app/api/admin/recompute-metrics/: route.ts
apps/web/app/api/fighters/: route.ts
apps/web/app/api/fighters/[id]/: route.ts
apps/web/app/api/fighters/[id]/fights/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/matchmaking/: route.ts
apps/web/app/api/recommendations/: route.ts
apps/web/app/api/weight-classes/: route.ts
apps/web/app/decision/[fighterId]/: DecisionClient.tsx  page.tsx
apps/web/app/docs/runbook/: page.tsx
apps/web/app/fighters/: FightersClient.tsx  page.tsx
apps/web/app/fighters/[slug]/: page.tsx
apps/web/app/recommend/: page.tsx
apps/web/app/wc/[slug]/: page.tsx
apps/web/lib/data/: dataAccess.ts  dataMode.ts  demoData.ts  supabaseData.ts
apps/web/lib/db/: queries.ts  supabaseBrowser.ts  supabaseServer.ts
apps/web/lib/decision/: constraints.ts  engine.ts  index.ts  mockData.ts  policy.ts  recommend.ts  scoring.ts  types.ts
apps/web/lib/decision/__tests__/: constraints.test.ts  scoring.test.ts
apps/web/lib/scoring/: matchup.test.ts  matchup.ts
data/: README.md
data/features/: features.csv
docs/: architecture.md  decision-engine.md  runbook.md
examples/: division_recommendations_example.md  fighter_profile_example.md  matchup_simulation_example.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: FighterGrid.jsx  QueryResult.jsx  QuerySkeleton.jsx  SearchBar.jsx
infra/db/migrations/: 001_pivot_schema.sql
scripts/: test.sh
services/etl/: README.md  __init__.py  pyproject.toml
services/etl/scripts/: etl_from_csv.py  etl_load_seed.py
services/etl_v2/: README.md  pyproject.toml
services/etl_v2/etl_v2/: __init__.py  cli.py  config.py  feature_builder.py  ingest.py
services/modeling/: README.md  pyproject.toml
services/modeling/modeling/: __init__.py  __main__.py  cli.py  config.py  data.py  matchmaking.py  train.py
src/fightmatch/: __init__.py  cache.py  cli.py  config.py
src/fightmatch/analytics/: __init__.py  consistency.py  landscape.py  profile.py  rating.py
src/fightmatch/cli/: __init__.py  __main__.py  _util.py  analytics.py  ingest.py  recommend.py
src/fightmatch/data/: __init__.py
src/fightmatch/db/: __init__.py  ingest.py  models.py
src/fightmatch/engine/: __init__.py  explain.py  promoter.py  simulate.py  whatif.py
src/fightmatch/match/: __init__.py  explain.py  features.py  rank.py  score.py
src/fightmatch/scrape/: __init__.py  parse.py  schemas.py  store.py  ufcstats_client.py
src/fightmatch/utils/: __init__.py  log.py
supabase/: seed.sql
supabase/migrations/: 0001_init.sql
tests/: test_analytics.py  test_cache.py  test_cli_smoke.py  test_parse.py  test_phase2.py  test_rank_score.py  test_simulate.py
tests/fixtures/: event_abc123.html  events_list.html  fight_bout1.html
