[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fightmatch"
version = "0.1.0"
description = "UFC matchmaking + rankings decision support (data-backed, terminal + JSON/CSV)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FightMatch" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
fightmatch = "fightmatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
