[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fightmatch"
version = "2.0.0"
description = "Full-stack UFC analytics platform: CLI engine, FastAPI + Gemini AI, React dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FightMatch" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests>=2.28",
  "beautifulsoup4>=4.12",
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "google-genai>=1.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]

[project.scripts]
fightmatch = "fightmatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
