[project]
name = "fightmatch-etl-v2"
version = "0.1.0"
description = "ETL v2: ingest + feature builder (no leakage) for FightMatch pipeline"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fightmatch-ingest = "etl_v2.cli:ingest_cmd"
fightmatch-build-features = "etl_v2.cli:build_features_cmd"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
